[package]
name = "pipewire-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PipeWire Client"
repository.workspace = true
documentation = ""
keywords = ["pipewire", "client"]

[dependencies]
pipewire = { version = "0.8" }
pipewire-spa-utils = { path = "../spa-utils"}
pipewire-common = { path = "../common" }
serde_json = "1.0"
crossbeam-channel = "0.5"
uuid = { version = "1.12", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
libc = "0.2"

[dev-dependencies]
pipewire-test-utils = { path = "../test-utils" }
rstest = "0.24"
serial_test = "3.2"
ctor = "0.2"