[package]
name = "pipewire-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PipeWire Test Utils"
repository.workspace = true
documentation = ""
keywords = ["pipewire", "test", "utils"]

[dependencies]
pipewire-common = { path = "../common" }
bollard = { version = "0.18", features = ["buildkit"] }
futures = "0.3"
tar = "0.4"
flate2 = "1.0"
bytes = "1.9"
sha2 = "0.10"
uuid = { version = "1.12", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
rstest = "0.24"
ctor = "0.2"
http = "1.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
url = "2.5"
hex = "0.4"
ureq = "3.0"
